# GeminiBook

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
GeminiInterface/: CMakeLists.txt  MarketDataReceiver.cpp  MarketDataReceiver.h
OrderBook/: CMakeLists.txt  Level.h  List.h  Side.h  Test.cpp
toolchains/: darwin-llvm-homebrew
